build: Use nextflow gradle plugin
Signed-off-by: Edmund Miller <edmund.miller@seqera.io>